--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="title_current_list">Список</string>
     <string name="title_settings">Настройки</string>
     <string name="add_button_text">Добавить</string>
+    <string name="account_settings">Настройки аккаунта</string>
+    <string name="theme_settings">Настройки темы</string>
+    <string name="support">Написать в поддержку</string>
+    <string name="share_app">Поделиться приложением</string>
+    <string name="about_app">О приложении</string>
 </resources>
