--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_settings">Настройки</string>
     <string name="add_button_text">Добавить</string>
     <string name="account_settings">Настройки аккаунта</string>
-    <string name="theme_settings">Настройки темы</string>
+    <string name="dark_theme">Темная тема</string>
     <string name="support">Написать в поддержку</string>
     <string name="share_app">Поделиться приложением</string>
     <string name="about_app">О приложении</string>
