--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,5 @@
     <string name="lbl_support">Написать в поддержку</string>
     <string name="lbl_share_app">Поделиться приложением</string>
     <string name="lbl_about_app">О приложении</string>
+    <string name="btn_new_list">Новый список</string>
 </resources>
