--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="lbl_support">Support</string>
     <string name="lbl_share_app">Share App</string>
     <string name="lbl_about_app">About</string>
+    <string name="btn_new_list">New List</string>
 </resources>
