--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="btn_new_list">New List</string>
     <string name="lbl_general">General</string>
     <string name="lbl_help_amp_support"><![CDATA[Help & Support]]></string>
+    <string name="lbl_help">Help</string>
 </resources>
