--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="lbl_general">General</string>
     <string name="lbl_help_amp_support"><![CDATA[Help & Support]]></string>
     <string name="lbl_help">Help</string>
+    <string name="desc_add_new_list_item_button">Add new list item button</string>
 </resources>
